cmake_minimum_required(VERSION 3.15)
project(const-test)

set(CMAKE_CXX_STANDARD 14)

#add_executable(sec18
 #        main1.cpp const-test.cpp)
add_executable(const-test
         const-1.cpp)

#add_executable(sec18
#        palindrome_stl.cpp )

#add_executable(sec18
 #       const-test.cpp )

#add_executable(sec18
 #       main1.cpp )

